--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "pinia": "^2.0.32",
     "sass": "^1.58.3",
     "vue": "^3.2.45",
+    "vue-material-design-icons": "^5.2.0",
     "vue-router": "4"
   },
   "devDependencies": {
